--- a/backend/package.json
+++ b/backend/package.json
@@ -2,21 +2,29 @@
   "name": "algalon-backend",
   "version": "1.0.0",
   "description": "Log analysis tool for WoW Classic",
-  "main": "index.js",
+  "main": "./build/backend/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "tslint -c tslint.json -p tsconfig.json --fix",
     "tsc": "tsc",
-    "dev": "ts-node-dev --respawn --transpile-only ./app.ts",
-    "prod": "tsc && node ./build/backend/app.js"
+    "prebuild": "npm run lint",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "start": "node .",
+    "dev": "npm run lint && ts-node-dev --respawn --transpile-only ./app.ts",
+    "prod": "npm run lint && tsc && node ./build/backend/app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^3.6.0"
+    "fastify": "^3.6.0",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "@types/node": "^14.11.10",
+    "@types/node-fetch": "^2.5.7",
     "ts-node-dev": "^1.0.0",
+    "tslint": "^6.1.3",
     "typescript": "^4.0.3"
   }
 }
